--- a/html/music.html
+++ b/html/music.html
@@ -62,6 +62,7 @@
   <script src="http://cdn.embed.ly/jquery.embedly-3.1.1.min.js"></script>
   <script type="text/javascript" src="http://cdn.embed.ly/player-0.0.12.min.js"></script>
   <script src="/js/common.js"></script>
+  <script src="/js/search.js"></script>
   <script src="/js/music.js"></script>
   <script>
     $.embedly.defaults.key = '3ee528c9eb4b4908b268ce1ace120c92';
